--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DB接続情報
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql:team_dev_yasumu
+spring.datasource.url=jdbc:postgresql://localhost:5432/team_dev_yasumu
 spring.datasource.username=student
 spring.datasource.password=himitu
 # SQL実行出力
